Update cart display in products.html
Removed old cart display and added a new top bar with cart count.

Signed-off-by: rawan037 <rawanbaniamer037@gmail.com>

--- a/products.html
+++ b/products.html
@@ -231,12 +231,11 @@
 
 <body>
 <div class="container">
-
+<div class="top-bar">
+  <div class="cart">
+    🛒 <span id="cartCount">0</span>
+  </div>
   <a href="index.html" class="back">⬅ الرجوع للرئيسية</a>
-  <!-- سلة التسوق -->
-  <div class="cart" onclick="openCart()">
-  🛒 عدد المنتجات: <span id="cartCount">0</span> |
-  المجموع: <span id="cartTotal">0.00</span> JOD
 </div>
 
   <h1>🛒 المنتجات المتوفرة</h1>
