--- a/products.html
+++ b/products.html
@@ -233,10 +233,21 @@
 <body>
 <div class="container">
 <div class="top-bar">
-  <div class="cart">
-    🛒 <span id="cartCount">0</span>
-  </div>
+  
   <a href="index.html" class="back">⬅ الرجوع للرئيسية</a>
+  <div id="cartModal" class="modal">
+    <div class="modal-content"> <h3>🧺 محتويات السلة</h3> <div id="cartItems">
+      
+    </div> <p class="total">💰 المجموع: <span id="modalTotal">0.00</span> JOD</p> 
+      <div class="payments">
+        <div onclick="payCOD()" class="pay">
+        💵 الدفع عند الاستلام
+      </div>
+        <div onclick="payOnline()" class="pay">
+        💳 الدفع الإلكتروني</div>
+        <div onclick="requestDelivery()" class="pay">🚚 طلب توصيل</div>
+  </div>
+    <button class="close" onclick="closeCart()">إغلاق</button> </div> </div>
 </div>
 
   <h1>🛒 المنتجات المتوفرة</h1>
@@ -378,23 +389,7 @@
 
 
 </div>
-<div id="cartModal" class="modal">
-  <div class="modal-content">
-    <h3>🧺 محتويات السلة</h3>
 
-    <div id="cartItems"></div>
-
-    <p class="total">💰 المجموع: <span id="modalTotal">0.00</span> JOD</p>
-
-    <div class="payments">
-      <div onclick="payCOD()" class="pay">💵 الدفع عند الاستلام</div>
-      <div onclick="payOnline()" class="pay">💳 الدفع الإلكتروني</div>
-      <div onclick="requestDelivery()" class="pay">🚚 طلب توصيل</div>
-    </div>
-
-    <button class="close" onclick="closeCart()">إغلاق</button>
-  </div>
-</div>
 
 <script>
 let cart = [];
