--- a/products.html
+++ b/products.html
@@ -217,16 +217,7 @@
   justify-content: center;
 }
 
-/* زر الرجوع على اليمين */
-.back {
-  display: inline-block;
-  background: #ff8c1a;
-  color: #fff;
-  padding: 8px 12px;
-  border-radius: 25px;
-  text-decoration: none;
-}
- 
+
   </style>
 </head>
 
@@ -235,17 +226,17 @@
 <div class="top-bar">
   
   <a href="index.html" class="back">⬅ الرجوع للرئيسية</a>
-  <div id="cartModal" class="modal">
-    <div class="modal-content"> <h3>🧺 محتويات السلة</h3> <div id="cartItems">
-      
-    </div> <p class="total">💰 المجموع: <span id="modalTotal">0.00</span> JOD</p> 
-      <div class="payments">
-        <div onclick="payCOD()" class="pay">
-        💵 الدفع عند الاستلام
-      </div>
-        <div onclick="payOnline()" class="pay">
-        💳 الدفع الإلكتروني</div>
-        <div onclick="requestDelivery()" class="pay">🚚 طلب توصيل</div>
+ <!-- سلة التسوق --> 
+  <div class="cart" onclick="openCart()">
+    🛒 عدد المنتجات: 
+    <span id="cartCount">0</span>
+    | المجموع: <span id="cartTotal">0.00</span> JOD 
+  </div> </div> <div id="cartModal" class="modal">
+    <div class="modal-content"> <h3>🧺 محتويات السلة</h3> 
+      <div id="cartItems"></div> <p class="total">💰 المجموع: <span id="modalTotal">0.00</span> JOD</p>
+      <div class="payments"> <div onclick="payCOD()" class="pay">💵 الدفع عند الاستلام</div> <div onclick="payOnline()" class="pay">💳 الدفع الإلكتروني</div>
+        <div onclick="requestDelivery()" class="pay">🚚 طلب توصيل</div> </div> <button class="close" onclick="closeCart()">إغلاق</button> 
+ </div> </div>
   </div>
     <button class="close" onclick="closeCart()">إغلاق</button> </div> </div>
 </div>
