Add copyright notice to products.html
Signed-off-by: rawan037 <rawanbaniamer037@gmail.com>

--- a/products.html
+++ b/products.html
@@ -417,6 +417,8 @@ setTimeout(()=>cartIcon.style.transform="scale(1)",200);
 }
 
 </script>
-
+<div class="copyright-bar">
+  © 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه
+</div>
 </body>
 </html>
