--- a/products.html
+++ b/products.html
@@ -224,6 +224,25 @@ pointer-events:none;
   scroll-behavior:smooth;
 }
 }
+  .site-footer{
+  background:#0b3d3d;     /* نفس لون الموقع تقريبًا */
+  color:#fff;
+  text-align:center;
+  padding:15px;
+  margin-top:40px;
+  font-size:14px;
+  border-top:3px solid #ff8c1a;
+}
+  body{
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+}
+
+.site-footer{
+  margin-top:auto;
+}
+  
 </style>
 </head>
 
@@ -417,8 +436,8 @@ setTimeout(()=>cartIcon.style.transform="scale(1)",200);
 }
 
 </script>
-<div class="copyright-bar">
-  © 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه
-</div>
+<footer class="site-footer">
+  جميع الحقوق محفوظة © 2026 | متجر الخضار الطازجة
+</footer>
 </body>
 </html>
