--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   <img src="images/خلفيه.png" class="corner-img veggies" alt="خضار">
   <div class="profile-wrapper">
     <div class="glow-bg"></div>
-    <img src="images/المدير.png" class="profile-img" alt="المدير">
-    <p class="manager-name">بإدارة: السيد ضياء الدين بني عامر</p>
+    <img src="images/عبي.png" class="profile-img" alt="المدير">
+  
   </div>
   <h3 class="subtitle">🛒 متجر للخضار والفواكه</h3>
   <h1 class="title">أسواق دير العسل للخضار والفواكه</h1>
