--- a/products.html
+++ b/products.html
@@ -247,6 +247,10 @@ pointer-events:none;
 }
   
 </style>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  
 </head>
 
 <body>
@@ -392,6 +396,8 @@ sendOrder("طلب توصيل - "+address);
 
 function sendOrder(method){
 
+saveOrder(cart);   // حفظ الطلب للمستخدم
+
 let msg=`طلب جديد\n${method}\n\n`;
 
 cart.forEach(i=>msg+=`- ${i.name} (${i.price})\n`);
@@ -441,6 +447,40 @@ setTimeout(()=>cartIcon.style.transform="scale(1)",200);
 }
 
 </script>
+<script>
+const firebaseConfig = {
+ apiKey: "ضعهنا",
+ authDomain: "ضعهنا",
+ projectId: "ضعهنا"
+};
 
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+</script>
+  <script>
+auth.onAuthStateChanged(user=>{
+if(!user){
+window.location="login.html";
+}
+});
+</script>
+  <script>
+function saveOrder(cart){
+
+const user = auth.currentUser;
+
+if(!user){
+alert("يجب تسجيل الدخول");
+return;
+}
+
+db.collection("orders").add({
+userId: user.uid,
+items: cart,
+createdAt: new Date()
+});
+}
+</script>
 </body>
 </html>
