--- a/my-orders.html
+++ b/my-orders.html
@@ -1,1 +1,102 @@
 
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<title>طلباتي - أسواق دير العسل</title>
+
+<!-- الخطوط -->
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- CSS أساسي -->
+<style>
+body {
+    font-family: 'Cairo', sans-serif;
+    background: linear-gradient(180deg,#0b5fa5,#0f8f6e);
+    color: #fff;
+    margin: 0;
+    padding: 0 20px;
+}
+h1 {
+    text-align: center;
+    margin: 30px 0;
+}
+.order {
+    background: #083d66;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+}
+.order h3 {
+    margin: 0 0 10px 0;
+    color: #6bcf63;
+}
+.order p {
+    margin: 5px 0;
+}
+</style>
+
+<!-- مكتبات Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+
+<!-- إعداد Firebase -->
+<script>
+const firebaseConfig = {
+  apiKey: "ضعهنا",
+  authDomain: "ضعهنا",
+  projectId: "ضعهنا"
+};
+
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.firestore();
+</script>
+
+</head>
+<body>
+
+<h1>🛒 طلباتي</h1>
+<div id="ordersContainer"></div>
+
+<script>
+// التحقق من تسجيل الدخول
+auth.onAuthStateChanged(user => {
+
+  if(!user){
+    alert("يجب تسجيل الدخول أولاً");
+    window.location = "login.html"; // إعادة التوجيه لصفحة تسجيل الدخول
+    return;
+  }
+
+  // جلب طلبات المستخدم من Firestore
+  db.collection("orders")
+    .where("userId", "==", user.uid)
+    .orderBy("createdAt", "desc")
+    .get()
+    .then(snapshot => {
+      const container = document.getElementById("ordersContainer");
+      if(snapshot.empty){
+        container.innerHTML = "<p>لا توجد طلبات بعد.</p>";
+      }
+      snapshot.forEach(doc => {
+        const order = doc.data();
+        let html = `<div class="order">
+                        <h3>طلب بتاريخ: ${order.createdAt.toDate().toLocaleString()}</h3>
+                        <p>المنتجات:</p>
+                        <ul>`;
+        order.items.forEach(item => {
+          html += `<li>${item.name} - ${item.price} JOD</li>`;
+        });
+        html += `</ul></div>`;
+        container.innerHTML += html;
+      });
+    })
+    .catch(err => console.error(err));
+
+});
+</script>
+
+</body>
+</html>
